--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.7"   // <— NEU: diese Zeile hinzufügen
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
